@@ -5,3 +5,4 @@
 - pornone - fix listing
 - drtuber - fix playback
 - tubxporn - fix playback
+- porndig - fix playback
